main body overflow fix

--- a/css/general.css
+++ b/css/general.css
@@ -57,7 +57,6 @@ body {
 	color: var(--text-color);
 	font-size: var(--normal-font-size);
 	overflow-x: hidden;
-	overflow: hidden;
 }
 
 img,
